--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.rtl.min.css">
-    <title>TIGZOZO MEDIA</title>
+    <title>TIGZOZO</title>
 </head>
 <body>
     <!-- NAVIGATION BAR -->
