--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><span>Services</span></li>
                     <li>Testimonials</li>
             </ul>
-            <img src="./image/play.png" alt="dark">
+            <img src="./image/dark.mode.PNG" alt="dark">
             </div>
         </div>
     </nav>
