--- a/index.html
+++ b/index.html
@@ -70,5 +70,47 @@
             </div>
         </div>
     </section>
+
+    <section class="media">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 left">
+                   <h2>About Tigzozo Media</h2>
+                   <div class="text-img">
+                   <div class="text">
+                   <p>We are a dedicated team of digital and media
+                   creators,marketers and event planners who share
+                   a common passion with our clients. Together we
+                   create extraordinary brand experiences that help
+                   the business community establish their voice and
+evaluation. Our work is renowned for its highly
+crafted design, creativity and its ability- to
+drive action.</p>
+        </div>
+             <div class="images">    
+<img src="images\Rectangle 16.png" alt="">
+        <div class="pic">
+<img src="images\Rectangle 17.png" alt="">  
+       </div>
+    </div>
+     </div>
+    </div>
+
+       <div class="col-md-5 right">
+        <div class="image-one">
+            <img src="images\Rectangle 27.png" alt="">
+         
+        </div>
+        <div class="text-three">
+        <p>We take pride in our ability to deliver complex solutions in a way that you will find effortless and easy. Our process enables us to experiment with ideas of all kinds, deliver on time and stay within your budget.</p>
+    </div>  
+        <div class="btn1">
+            <button>Find out more</button>
+        </div>
+     </div>
+            
+        </div>
+        </div>
+    </section>
 </body>
 </html>
