--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- NAVIGATION BAR -->
     <nav class="mobile-nav">
-        <img src="./image/logo.png" alt="TIGZOZO">
+        <img src="./images/logo.png" alt="TIGZOZO">
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
@@ -21,13 +21,13 @@
     <nav class="pc-nav">
         <div class="container">
             <div class="flex-container">
-                <img src="./image/logo.png" alt="TIGZOZO">
+                <img src="./images/logo.png" alt="TIGZOZO">
                 <ul>
                     <li>About us</li>
                     <li><span>Services</span></li>
                     <li>Testimonials</li>
             </ul>
-            <img src="./image/dark.mode.PNG" alt="dark">
+            <img src="./images/dark.mode.PNG" alt="dark">
             </div>
         </div>
     </nav>
@@ -51,20 +51,20 @@
                     </div>
                     <div class="link">
                         <div class="text">
-                            <img src="./image/play.png" alt="image">
+                            <img src="./images/play.png" alt="image">
                             <p>Watch our latest video</p>
                         </div>
                         <div class="text">
-                            <img src="./image/tick.png" alt="image">
+                            <img src="./images/tick.png" alt="image">
                             <p>Trusted by reputable organizations</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md right">
-                    <img src="./image/Rectangle 2.png" alt="rectangle" class="image1">
-                    <img src="./image/Rectangle 3.png" alt="rectangle" class="image">
-                    <img src="./image/Rectangle 4.png" alt="rectangle" class="image1">
-                    <img src="./image/Rectangle 5.png" alt="rectangle" class="image">
+                    <img src="./images/Rectangle 2.png" alt="rectangle" class="image1">
+                    <img src="./images/Rectangle 3.png" alt="rectangle" class="image">
+                    <img src="./images/Rectangle 4.png" alt="rectangle" class="image1">
+                    <img src="./images/Rectangle 5.png" alt="rectangle" class="image">
                 </div>
                 
             </div>
@@ -88,16 +88,16 @@ crafted design, creativity and its ability- to
 drive action.</p>
         </div>
              <div class="images">    
-<img src="images\Rectangle 16.png" alt="">
+<img src="./images/Rectangle 16.png" alt="">
         <div class="pic">
-<img src="images\Rectangle 17.png" alt="">  
+<img src="./images/Rectangle 17.png" alt="">  
        </div>
     </div>
      </div>
     </div>
 
        <div class="col-md-5 right">
-        <div class="image-one">
+        <div class="image-ryt">
             <img src="images\Rectangle 27.png" alt="">
          
         </div>
